[project]
urls = { repository = "https://github.com/namastexlabs/whisperX" }
authors = [{ name = "Max Bain" }, { name = "Namastex Labs" }]
name = "whisperx"
version = "3.7.4+namastex.1"
description = "Time-Accurate Automatic Speech Recognition using Whisper. (Namastex fork with pyannote 4.x support)"
readme = "README.md"
requires-python = ">=3.12, <3.14"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.1.0,<2.3.0",
    "pandas>=2.2.3,<2.3.0",
    "av<16.0.0",
    # Modernized: pyannote 4.x, torch 2.8+, torchaudio 2.8+
    "pyannote-audio>=4.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'"
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

# Note: uv index configuration removed - parent project (whisperx-api) provides index config
# This allows the fork to be used as a dependency without index conflicts
